Implementazione grafica schemata prenotazioni

--- a/src/main/resources/Styles/Prenotazioni.css
+++ b/src/main/resources/Styles/Prenotazioni.css
@@ -1,161 +1,211 @@
-    #tuttaPagina{
-        -fx-background-color: #BBE1FA;
+#tuttaPagina{
+    -fx-background-color: #DDE6ED;
+}
 
-    }
-    .rigaCompleta{
-        -fx-background-color: #BBE1FA;
-        -fx-border-color: #BBE1FA;
-        -fx-border-width: 1;
-        -fx-padding: 6;
-    }
+.rigaCompleta{
+    -fx-background-color: #DDE6ED;
+    -fx-border-color: #DDE6ED;
+    -fx-border-width: 1;
+}
 
-    .contenitoreSezioneOrario{
-        -fx-background-color: #3282B8;
-        -fx-background-radius: 20 0 0 20;
-        -fx-border-radius: 20 0 0 20;
-        -fx-border-width: 2;
-        -fx-padding: 6;
-    }
+.contenitoreSezioneOrario{
+    -fx-background-color: #27374DFF;
+    -fx-border-radius: 20 0 0 20;
+    -fx-background-radius: 20 0 0 20;
+    -fx-border-width: 2;
+    -fx-padding: 6;
+    -fx-opacity: 0.8;
+}
 
+.contenitoreSezioneOrarioPrenotato{
+    -fx-background-color: #27374DFF;
+    -fx-opacity: 1;
+    -fx-background-radius: 20 0 0 20;
+    -fx-border-radius: 20 0 0 20;
+    -fx-border-width: 2;
+    -fx-padding: 6;
+}
 
-    .contenitoreSezioneOrarioPrenotato{
-        -fx-background-color: #006400;
-        -fx-background-radius: 20 0 0 20;
-        -fx-border-radius: 20 0 0 20;
-        -fx-border-width: 2;
-        -fx-padding: 6;
-    }
+#scrollProssimiAllenamenti.viewport{
+    -fx-background-color: #DDE6ED;
+}
 
-    #scrollProssimiAllenamenti.viewport{
+#scrollPrenotazione {
+    -fx-background-color: #DDE6ED;
+    -fx-border-color:  #DDE6ED;
+}
 
-    }
-    #scrollPrenotazione {
-        -fx-background-color: #BBE1FA;
+#scrollPrenotazione .viewport {
+    -fx-background-color: #DDE6ED;
+}
 
-    }
+#scrollPrenotazione .scroll-bar:vertical{
+    -fx-background-color: #DDE6ED;
+}
 
-    #scrollPrenotazione .viewport {
-        -fx-background-color: #BBE1FA; /* Imposta il colore per la viewport */
-    }
+#scrollPrenotazione .scroll-bar .thumb{
+    -fx-background-color: #526D82;
+    -fx-background-radius: 5;
+}
 
-    #scrollPrenotazione .scroll-bar:vertical{
-        -fx-background-color: transparent;
-        -fx-background-insets: 0;
-        -fx-border-color: transparent;
-        -fx-border-width: 0;
-    }
+.labelSala {
+    -fx-text-fill: #27374D;
+    -fx-font-weight: bold;
+    -fx-font-size: 2em;
+}
 
-    #scrollPrenotazione .scroll-bar .thumb{
-        -fx-background-color: #3282B8;
-        -fx-background-radius: 5;
-    }
+.labelPostiDisponibili {
+    -fx-text-fill: #27374D;
+    -fx-font-size: 1em;
+}
 
-    .contenitoreRigaStorico{
-        -fx-background-color:  #B22222;
-        -fx-text-fill: white;
-        -fx-background-radius: 20;
-        -fx-border-radius: 20;
-        -fx-border-width: 1;
-        -fx-alignment: center;
-    }
+.contenitoreRigaStorico{
+    -fx-background-color:  #526D82;
+    -fx-text-fill: #DDE6ED;
+    -fx-background-radius: 20;
+    -fx-border-radius: 20;
+    -fx-alignment: center;
+    -fx-opacity: 0.5;
+}
 
-    .containerProssimiAllenamenti{}
+.containerProssimiAllenamenti{}
 
-    .contenitoreRigaProssimiAllenamenti{
-        -fx-background-color:  #006400;
-        -fx-text-fill: white;
-        -fx-background-radius: 20;
-        -fx-border-radius: 20;
-        -fx-border-width: 1;
-        -fx-alignment: center;
-    }
+.contenitoreRigaProssimiAllenamenti{
+    -fx-background-color:  #526D82;
+    -fx-text-fill: #DDE6ED;
+    -fx-background-radius: 20;
+    -fx-border-radius: 20;
+    -fx-alignment: center;
+    -fx-opacity: 0.8;
+}
 
-    .contenitoreDettagliRiga{
-        -fx-background-color: #0F4C75;
-        -fx-padding: 10;
-        -fx-width: 300;
-        -fx-background-radius: 0 20 20 0;
-        -fx-border-radius: 0 20 20 0;
-        -fx-border-width: 2;
-        -fx-padding: 6;
-    }
-    .labelFineInizio{
-        -fx-font-weight: bold;
-        -fx-text-fill: white;
-    }
+.contenitoreDettagliRiga{
+    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #9DB2BF, #27374D);
+    -fx-width: 300;
+    -fx-background-radius: 0 20 20 0;
+    -fx-border-radius: 0 20 20 0;
+    -fx-border-width: 1;
+    -fx-padding: 6;
+}
 
-    .labelInfoStorico{
-        -fx-font-size: 1.5em;
-        -fx-font-weight: bold;
-        -fx-text-fill:  #1B262C;
-    }
+.labelFineInizio{
+    -fx-font-weight: bold;
+    -fx-text-fill: #dde6ed;
+}
 
-    #labelProssimiAllenamenti{
-        -fx-font-weight: bold;
-        -fx-font-size: 2em;
-        -fx-font-style:#1B262C;
+.labelInfoStorico{
+    -fx-font-size: 1em;
+    -fx-font-weight: bold;
+    -fx-text-fill:  #1B262C;
+}
 
-    }
+#labelTitoloPagina {
+    -fx-font-weight: bold;
+    -fx-font-size: 2.8em;
+    -fx-font-style: #27374D;
+}
 
-    #labelStorico{
-        -fx-font-weight: bold;
-        -fx-font-size: 2em;
-        -fx-font-style:#1B262C;
-    }
+#labelProssimiAllenamenti{
+    -fx-font-weight: bold;
+    -fx-font-size: 1.8em;
+    -fx-font-style:#27374D;
+}
 
+#labelStorico{
+    -fx-font-weight: bold;
+    -fx-font-size: 1.8em;
+    -fx-font-style:#27374D;
+}
 
-    .btnGiornoChiusura{
-        -fx-background-color: red;
-        -fx-font-weight: bold;
-    }
+.btnGiornoChiusura{
+    -fx-background-color: #BBE1FA;
+    -fx-font-weight: bold;
+    -fx-font-size: 1.5em;
+    -fx-opacity: 0.5;
+    -fx-padding: 10;
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+}
 
-    .btnPrenotato{
-        -fx-background-color: #006400;
-        -fx-text-fill: white;
-    }
+.btnPrenotato{
+    -fx-background-color: #BBE1FA;
+    -fx-opacity: 0.5;
+    -fx-text-fill: #27374DFF;
+    -fx-font-size: 0.9em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-pref-width: 200;
+    -fx-padding: 10;
+}
 
-    .btnPrenotati{
-        -fx-background-color: #BBE1FA;
-        -fx-background-radius: 10;
-        -fx-border-radius: 10;
-        -fx-border-width: 1;
-        -fx-border-color: #3282B8;
-        -fx-text-fill: #1B262C;
-        -fx-font-weight: bold;
-    }
+.btnPrenotati{
+    -fx-background-color: #BBE1FA;
+    -fx-text-fill: #27374DFF;
+    -fx-font-size: 0.9em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-pref-width: 200;
+    -fx-padding: 10;
+}
 
-    .btnPrenotati:hover{
-        -fx-background-color:#3282B8 ;
-    }
+.btnPrenotati:hover{
+    -fx-cursor: hand;
+    -fx-background-color: #27374d;
+    -fx-text-fill: #DDE6EDFF;
+    -fx-fill: #DDE6EDFF;
+}
 
-    .btnEliminaPrenotazione{
-        -fx-background-color: #B22222;
-        -fx-text-fill: white;
-        -fx-font-weight: bold;
-        -fx-opacity: 0.7;
-    }
+.btnEliminaPrenotazione{
+    -fx-background-color: #BBE1FA;
+    -fx-text-fill: #526D82;
+    -fx-font-size: 0.9em;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-pref-width: 200;
+    -fx-padding: 10;
+}
 
-    .btnEliminaPrenotazione:hover{
-        -fx-opacity: 1;
-    }
+.btnEliminaPrenotazione:hover{
+    -fx-opacity: 1;
+    -fx-cursor: hand;
+    -fx-background-color: #27374d;
+    -fx-text-fill: #DDE6EDFF;
+    -fx-fill: #DDE6EDFF;
+}
 
-    .btnPrecedenteNO{
-        -fx-background-color: #B22222;
-        -fx-border-color: #1B262C;
-        -fx-border-width: 1;
-        -fx-text-fill: white;
-        -fx-opacity: 0.8;
-    }
+.btnPrecedenteNO{
+    -fx-background-color: #dde6ed;
+    -fx-text-fill: #27374DFF;
+    -fx-font-size: 0.9em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-padding: 10 30;
+    -fx-pref-width: 200;
+    -fx-opacity: 0.5;
+}
 
-    .btnPrecSucc{
-        -fx-background-color: #0F4C75;
-        -fx-border-color: #1B262C;
-        -fx-border-width: 1;
-        -fx-text-fill: white;
-        -fx-opacity: 0.8;
-    }
+.btnPrecSucc{
+    -fx-background-color: #dde6ed;
+    -fx-text-fill: #27374DFF;
+    -fx-font-size: 0.9em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-padding: 10 30;
+    -fx-pref-width: 200;
+    -fx-opacity: 0.8;
+}
 
-    .btnPrecSucc:hover{
-        -fx-opacity: 1;
-    }
+.btnPrecSucc:hover{
+    -fx-opacity: 1;
+}
 
