--- a/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
@@ -12,47 +12,49 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane id="tuttaPagina" stylesheets="@../../../Styles/Prenotazioni.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.PrenotazioniController">
-
-
-    <top>
-        <VBox styleClass="pane_offerte_dashboard" BorderPane.alignment="CENTER" />
-    </top>
-
-
-    <center>
-        <GridPane hgap="40" vgap="20" BorderPane.alignment="CENTER">
-             <Label alignment="CENTER" text="Prenota il tuo allenamento">
-                 <font>
-               <Font name="Arial Bold" size="30.0" />
-            </font>
-             </Label>
-            <Label id="labelProssimiAllenamenti" fx:id="labelProssimiAllenamenti" text="I tuoi prossimi allenamenti" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <Label id="labelStorico" fx:id="labelStorico" text="Storico delle tue prenotazioni" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <ScrollPane id="scrollPrenotazione" fx:id="scrollPrenotazione" fitToWidth="true" maxWidth="500.0" vbarPolicy="AS_NEEDED" GridPane.columnIndex="0" GridPane.rowIndex="1">
-                <content>
-                    <HBox id="containerGiorniPrenotazione" fx:id="containerGiorniPrenotazione" fillHeight="false" spacing="10" />
-                </content>
-            </ScrollPane>
-            <ScrollPane id="scrollPrenotazione" fx:id="scrollProssimiAllenamenti" fitToWidth="true" hbarPolicy="NEVER" maxWidth="340.0" vbarPolicy="AS_NEEDED" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                <content>
-                    <VBox id="corpoProssimiAllenamenti" fx:id="corpoProssimiAllenamenti" maxWidth="340.0" />
-                </content>
-            </ScrollPane>
-            <ScrollPane id="scrollPrenotazione" fx:id="scrollStoricoCliente" fitToWidth="true" hbarPolicy="NEVER" maxWidth="340.0" vbarPolicy="AS_NEEDED" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                <content>
-                    <VBox id="corpoStorico" fx:id="corpoStorico" />
-                </content>
-            </ScrollPane>
-            <columnConstraints>
-                <ColumnConstraints prefWidth="600.0" />
-                <ColumnConstraints prefWidth="340.0" />
-                <ColumnConstraints prefWidth="340.0" />
-            </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-         </rowConstraints>
-        </GridPane>
-    </center>
-    <padding><Insets left="40" /></padding>
+   <center>
+      <VBox alignment="CENTER" fillWidth="false" spacing="10" BorderPane.alignment="CENTER">
+         <children>
+              <GridPane alignment="CENTER" hgap="40" vgap="20">
+                  <Label id="labelProssimiAllenamenti" fx:id="labelProssimiAllenamenti" text="I tuoi prossimi allenamenti" />
+                   <Label id="labelTitoloPagina" alignment="CENTER" text="Prenota il tuo allenamento" GridPane.columnIndex="1">
+                       <font>
+                     <Font name="Arial Bold" size="30.0" />
+                  </font>
+                   </Label>
+                  <Label id="labelStorico" fx:id="labelStorico" text="Storico delle tue prenotazioni" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                  <ScrollPane id="scrollPrenotazione" fx:id="scrollPrenotazione" fitToWidth="true" maxWidth="500.0" vbarPolicy="AS_NEEDED" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                      <content>
+                          <HBox id="containerGiorniPrenotazione" fx:id="containerGiorniPrenotazione" fillHeight="false" spacing="10" />
+                      </content>
+                  <padding>
+                     <Insets left="0.0" right="0.0" />
+                  </padding>
+                  </ScrollPane>
+                  <ScrollPane id="scrollPrenotazione" fx:id="scrollStoricoCliente" fitToWidth="true" hbarPolicy="NEVER" maxWidth="340.0" vbarPolicy="AS_NEEDED" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                      <content>
+                          <VBox id="corpoStorico" fx:id="corpoStorico" />
+                      </content>
+                  </ScrollPane>
+                  <ScrollPane id="scrollPrenotazione" fx:id="scrollProssimiAllenamenti" fitToWidth="true" hbarPolicy="NEVER" maxWidth="340.0" vbarPolicy="AS_NEEDED" GridPane.rowIndex="1">
+                      <content>
+                          <VBox id="corpoProssimiAllenamenti" fx:id="corpoProssimiAllenamenti" maxWidth="340.0" />
+                      </content>
+                  </ScrollPane>
+                  <columnConstraints>
+                      <ColumnConstraints halignment="CENTER" prefWidth="340.0" />
+                      <ColumnConstraints halignment="CENTER" prefWidth="600.0" />
+                      <ColumnConstraints halignment="CENTER" prefWidth="340.0" />
+                  </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints valignment="CENTER" />
+                  <RowConstraints />
+               </rowConstraints>
+               <padding>
+                  <Insets top="20.0" />
+               </padding>
+              </GridPane>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
