--- a/src/main/resources/Styles/contactUsStyle.css
+++ b/src/main/resources/Styles/contactUsStyle.css
@@ -1,28 +1,36 @@
-.vbox {
-    -fx-font-size: 2em;
+#contenitorePagina {
+    -fx-background-color: #DDE6ED;
+}
+
+#contenitorePagina >.split-pane-divider {
+    -fx-background-color: #526D82;
+    -fx-padding: 0;
 }
 
 .label-titolo {
-    -fx-font-size: 1.5em;
+    -fx-text-fill: #526D82;
+    -fx-font-size: 2em;
     -fx-font-weight: bold;
 }
 
 .label-contenuto {
-    -fx-font-size: 1em;
+    -fx-font-size: 1.5em;
+    -fx-text-fill: #526D82;
 }
 
 .icone-socials {
-    -fx-font-size: 1em;
+    -fx-font-size: 1.5em;
+    -fx-background-color: #526D82;
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-padding: 10 30;
+    -fx-text-fill: #dde6ed;
+    -fx-font-family: "Arial";
+    -fx-pref-width: 250;
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-#mapFrame {
-    width: 100%;
-    height: 100%;
-    border: none;
+.icone-socials:hover {
+    -fx-cursor: hand;
+    -fx-background-color: #27374d;
+    -fx-text-fill: #DDE6EDFF;
 }
